introduce pelican settings; add template to list categories and articles

--- a/pelican/tools/manager/templates/list_categories.html
+++ b/pelican/tools/manager/templates/list_categories.html
@@ -3,8 +3,13 @@
 
 <h1>Categories</h1>
 <ul>
-{% for cat in categories %}
-    <li>{{cat}}</li>
+{% for cat, articles in categories %}
+    <li>{{cat.name}}</li>
+    <ul>
+    {% for article in articles %}
+        <li>{{article.title}}</li>
+    {% endfor %}
+    </ul>
 {% endfor %}
 </ul>
 
