--- a/pelican/tools/manager/templates/list_categories.html
+++ b/pelican/tools/manager/templates/list_categories.html
@@ -7,7 +7,7 @@
     <li>{{cat.name}}</li>
     <ul>
     {% for article in articles %}
-        <li>{{article.title}}</li>
+        <li><a href="/preview/{{article.filename | basename}}">{{article.title}}</a></li>
     {% endfor %}
     </ul>
 {% endfor %}
